[gd_scene load_steps=17 format=3 uid="uid://bxne8pbflgujx"]

[ext_resource type="Script" uid="uid://mysxiqoroh85" path="res://scripts/npc.gd" id="1_abqhh"]
[ext_resource type="Texture2D" uid="uid://ce172odf01n2r" path="res://assets/Tiny Pixel Japan Male Character Pack/NPC_Ronin.png" id="1_ideak"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kh24r"]
atlas = ExtResource("1_ideak")
region = Rect2(0, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul7y6"]
atlas = ExtResource("1_ideak")
region = Rect2(29, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc6q4"]
atlas = ExtResource("1_ideak")
region = Rect2(58, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcvl2"]
atlas = ExtResource("1_ideak")
region = Rect2(87, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_d61ma"]
atlas = ExtResource("1_ideak")
region = Rect2(116, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_slxoh"]
atlas = ExtResource("1_ideak")
region = Rect2(145, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_l64hl"]
atlas = ExtResource("1_ideak")
region = Rect2(174, 0, 29, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_215dd"]
atlas = ExtResource("1_ideak")
region = Rect2(203, 0, 29, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_p5bpe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh24r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul7y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc6q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcvl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d61ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slxoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l64hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_215dd")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_upjdb"]
resource_name = "Idle side"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_u41a8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cgete"]
_data = {
&"Idle side": SubResource("Animation_upjdb"),
&"RESET": SubResource("Animation_u41a8")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xxcha"]
radius = 9.0
height = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_abqhh"]
radius = 18.973665

[node name="NPC" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_abqhh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p5bpe")
animation = &"Idle"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cgete")
}
autoplay = "Idle side"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 3
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_xxcha")

[node name="AddArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AddArea"]
shape = SubResource("CircleShape2D_abqhh")
debug_color = Color(0.31157383, 0.6267558, 9.62615e-07, 0.41960785)

[connection signal="area_entered" from="AddArea" to="." method="_on_add_area_area_entered"]
[connection signal="body_entered" from="AddArea" to="." method="_on_add_area_body_entered"]
